--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^5.2.0",
     "@angular/router": "^4.0.0",
+    "@angular/service-worker": "^5.2.0",
     "core-js": "^2.4.1",
+    "ng-pwa-tools": "0.0.15",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
