--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "ng-font-type",
   "version": "1.0.0",
+  "author": "ABACHOUCH Youssouf",
   "license": "MIT",
+  "main": "server.js",
   "scripts": {
     "ng": "ng",
     "build": "ng build --prod",
@@ -9,9 +11,16 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot -prod",
-    "start": "node server.js"
+    "start": "tsc && node server.js",
+    "start-dev": "tsc -w & node server.js",
+    "node": "node",
+    "tsc": "tsc"
   },
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Abachouch/ng-fontType.git"
+  },
+  "private": false,
   "dependencies": {
     "@angular/cli": "1.6.4",
     "@angular/compiler-cli": "^5.1.0",
@@ -23,14 +32,16 @@
     "@angular/http": "^5.1.0",
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/language-service": "^5.1.0",
     "@angular/router": "^5.1.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "typescript": "~2.5.3",
+    "ts-node": "~3.2.0"
   },
   "devDependencies": {
-    "@angular/language-service": "^5.1.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -44,12 +55,14 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "tslint": "~5.9.1"
   },
   "engines": {
     "node": "8.9.4",
     "npm": "5.6.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Abachouch/ng-fontType/issues"
+  },
+  "homepage": "https://github.com/Abachouch/ng-fontType#readme"
 }
