--- a/package.json
+++ b/package.json
@@ -34,10 +34,15 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "@types/core-js": "^0.9.45",
+    "@types/node": "~6.0.60",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
+    "path": "^0.12.7",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
+    "systemjs": "^0.20.19",
     "ts-node": "~3.2.0",
     "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
@@ -45,7 +50,6 @@
   "devDependencies": {
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
